# SWARBenchmark

./: .gitignore  CMakeLists.txt  README.md
src/: benchmark.cpp  genString.cpp  genString.h  restrict.cpp  restrict.h  restrict_perf.cpp  swar.cpp  swar.h  test.cpp
